[package]
name = "playtak_ws"
version = "0.1.0"
authors = ["nqeron <nqeron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.2"
serde = {version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
futures = { version = "0.3.5", default-features = false }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
regex = "1.3.7"
log = "0.4.8"
env_logger = "0.7.1"
lazy_static = "1.4.0"
